# YuMo

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  electron-builder.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  recorder.html  vite.config.ts
.github/workflows/: ci.yml  release.yml
crates/yumo-core/: Cargo.toml
crates/yumo-core/src/: audio_ctrl.rs  audio_cue.rs  audio_io.rs  custom_models.rs  custom_worker.rs  daemon.rs  daemon_client.rs  db.rs  denoiser.rs  device_watcher.rs  error.rs  keychain.rs  lib.rs  mask.rs  paster.rs  permissions.rs  pipeline.rs  recorder.rs  settings.rs  state.rs  text_processor.rs  transcriber.rs
crates/yumo-core/src/platform/: mod.rs  traits.rs  types.rs
crates/yumo-core/src/platform/linux/: audio_ctrl.rs  keychain.rs  mod.rs  paster.rs  permissions.rs  recorder.rs
crates/yumo-core/src/platform/macos/: audio_ctrl.rs  keychain.rs  paster.rs  permissions.rs  recorder.rs
crates/yumo-core/src/platform/windows/: audio_ctrl.rs  keychain.rs  mod.rs  paster.rs  permissions.rs  recorder.rs
crates/yumo-core/src/text_processor/: builtin_dict.rs  builtin_dictionary.json  cn_numerals.rs
crates/yumo-core/src/text_processor/cn_numerals/: tests.rs
crates/yumo-core/tests/: api_completeness_test.rs  audio_ctrl_test.rs  audio_cue_test.rs  cloud_test.rs  cn_numerals_corpus_test.rs  context_test.rs  crate_independence_test.rs  custom_models_test.rs  daemon_callback_test.rs  db_test.rs  denoiser_test.rs  device_watcher_test.rs  downloader_test.rs  enhancer_test.rs  keychain_test.rs  model_registry_test.rs  paster_test.rs  permissions_test.rs  pipeline_test.rs  platform_integration_test.rs  platform_stubs_test.rs  prune_test.rs  recorder_test.rs  recording_playback_test.rs  settings_test.rs  state_test.rs  text_processor_test.rs  transcriber_test.rs  vad_test.rs
crates/yumo-core/tests/corpus/: cn_numerals.tsv
napi/: Cargo.toml  package.json
napi/src/: lib.rs
scripts/: bump-version.sh  deploy.sh  resign.sh
scripts/demo/: postprocess.sh  record.sh  tsconfig.json
scripts/demo/scenarios/: 01-onboarding.ts  02-recording.ts  03-manual-record.ts  04-ai-enhance.ts  05-model-manage.ts  06-statistics.ts  07-settings.ts  helpers.ts  run-all.ts
src/: App.css  App.tsx  main.tsx  recorder-main.tsx  test-setup.ts
src-electron/: addon.ts  ipc-handlers.ts  logger.ts  main.ts  preload.ts  shortcuts.ts  tray.ts  windows.ts
src-electron/ipc/: audio.ts  daemon.ts  dictionary.ts  index.ts  keychain.ts  models.ts  settings.ts  sprites.ts  system.ts  transcriptions.ts  windows.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: custom_model_shared.py  custom_model_worker.py  mlx_funasr_daemon.py
src-tauri/resources/custom_model_examples/: README.md  mimo.yaml
src-tauri/resources/tests/: conftest_helpers.py  test_custom_model.py  test_smoke.py
src-tauri/resources/tests/fixtures/fake_asr_pkg/: __init__.py
src-tauri/resources/tests/fixtures/specs/: hf_repos.yaml  mimo_like.yaml
src-tauri/src/: audio_ctrl.rs  cloud.rs  commands.rs  daemon.rs  db.rs  denoiser.rs  downloader.rs  enhancer.rs  hotkey.rs  keychain.rs  lib.rs  main.rs  paster.rs  permissions.rs  recorder.rs  state.rs  text_processor.rs  transcriber.rs  tray.rs  vad.rs  window_manager.rs
src-tauri/src/hotkey/: keymap.rs  macos.rs  mod.rs  tests.rs
src-tauri/tests/: audio_ctrl_test.rs  cloud_test.rs  csv_test.rs  db_test.rs  denoiser_test.rs  downloader_test.rs  e2e_smoke_test.rs  enhancer_test.rs  keychain_test.rs  model_registry_test.rs  paster_test.rs  permissions_test.rs  pipeline_test.rs  recorder_test.rs  recording_playback_test.rs  recording_save_test.rs  state_test.rs  text_processor_test.rs  transcriber_test.rs  vad_test.rs  window_manager_test.rs
src/__tests__/: App.test.tsx  Pages.test.tsx  RecorderFloat.test.tsx  logger.test.ts  test-utils.tsx
src/bridge/: electron.ts  index.ts  tauri.ts  types.ts
src/components/: OnboardingWizard.tsx  SpriteAnimation.tsx  SpriteCard.tsx  SpriteManager.tsx
src/components/CustomModels/: CustomModelCard.tsx  TrustDialog.tsx  bridge.ts  electronApi.ts  index.tsx  types.ts  useCustomModels.ts
src/components/ModelCard/: index.tsx  types.ts
src/hooks/: useTauriCommand.ts  useTauriEvent.ts
src/i18n/: index.ts  utils.ts
src/i18n/locales/: en.json  zh-CN.json
src/lib/: broadcast.ts  events.ts  logger.ts  pipeline.ts
src/pages/: Dashboard.tsx  Dictionary.tsx  Enhancement.tsx  History.tsx  Models.tsx  Permissions.tsx  Settings.tsx  Sprites.tsx
src/stores/: useAppStore.ts
src/windows/: RecorderFloat.tsx
