[package]
name = "yumo-napi"
version = "0.3.0"
edition = "2021"
description = "napi-rs bindings for yumo-core (Node.js native addon)"

[lib]
crate-type = ["cdylib"]

[dependencies]
yumo-core = { path = "../crates/yumo-core" }
napi = { version = "2", features = ["async", "napi8", "tokio_rt"] }
napi-derive = "2"
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
dirs = "5"
hound = "3"
uuid = { version = "1", features = ["v4"] }
zip = "2"
image = "0.25"

[build-dependencies]
napi-build = "2"
