[package]
name = "yumo"
version = "0.3.0"
description = "语墨 - Voice to Text"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "yumo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json", "multipart"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
regex = "1"
coreaudio-sys = "0.2"
hound = "3"
cocoa = "0.26"
objc = "0.2"
core-graphics = "0.24"
futures-util = "0.3"
security-framework = "2"
whisper-rs = "0.16"
tauri-plugin-global-shortcut = "2"
csv = "1"
tauri-plugin-autostart = "2"
ndarray = "0.17"
ort = "2.0.0-rc.12"
rustfft = "6"
tauri-plugin-dialog = "2"
log = "0.4"
simplelog = "0.12"
zip = "2"
image = { version = "0.25", default-features = false, features = ["png"] }
sys-locale = "0.3.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }

